--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3036/apidb
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
