--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
 			<artifactId>spring-security-test</artifactId>
 		</dependency>
 		<!--                  -->
+
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
